tests/ui/attributes/pass-indirectly.stderr
error: `#[rustc_pass_indirectly_in_non_rustic_abis]` attribute cannot be used on functions
  --> $DIR/pass-indirectly.rs:6:1
   |
LL | #[rustc_pass_indirectly_in_non_rustic_abis]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[rustc_pass_indirectly_in_non_rustic_abis]` can only be applied to structs

error: aborting due to 1 previous error

